--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - mongo
     environment:
       - PYTHONPATH=/code
+    command: sh -c "flake8 && uvicorn app.main:app --host 0.0.0.0 --port 8000"
 
   mongo:
     image: mongo
